objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>US CSI</fullName>
        <description>US CSI</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progess</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>V2K Case Management</fullName>
        <description>User list for V2K Case Management (formerly VisionAction)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Log</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Traveler Survey</fullName>
        <description>For Cases autogenerated from Traveler Survey Low NPS Score (0, 1, or 2)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progess</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Online Booking Tool Support</fullName>
        <description>Online Booking Tool users calling or emailing for support on the toolsOnline Booking Tool Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progess</fullName>
        </values>
        <values>
            <fullName>Log</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>PNR__c</fullName>
        <label>PNR</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolve__c</fullName>
        <label>Resolve</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>At_Fault__c</fullName>
        <label>At Fault</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Direct24</fullName>
                </value>
                <value>
                    <fullName>DT - Shared Services</fullName>
                </value>
                <value>
                    <fullName>DT US Core</fullName>
                    <label>DT - US Core</label>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>Info Only</fullName>
                </value>
                <value>
                    <fullName>Other After-hours Provider</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OBT_Site__c</fullName>
        <label>OBT Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Nutravel</fullName>
                </value>
                <value>
                    <fullName>Get There</fullName>
                </value>
                <value>
                    <fullName>INNfinity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ops_Owner__c</fullName>
        <description>The Ops Owner field is populated from the Ops Owner field on the related Account for a Client Traveler Survey case. This is autogenerated through Flow.</description>
        <label>Ops Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <inlineHelpText>Enter the agent name OR Goodwill GDW, Vendor VDR, Direct24 D24, Other After-hours AFT, Info Only INF, Online Booking OBT, Mid-office MDO,  IRD - int&apos;l rate desk, SSS - Shared Services, ARC, CLT - Client, ARR - Arranger.</inlineHelpText>
        <label>Agent Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Caller_name__c</fullName>
        <label>Caller name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgmt.</fullName>
                </value>
                <value>
                    <fullName>ADMs (Airline Debit Memo&apos;s)</fullName>
                </value>
                <value>
                    <fullName>Auto Ticketing</fullName>
                </value>
                <value>
                    <fullName>CETAS Approval</fullName>
                </value>
                <value>
                    <fullName>Client Communications</fullName>
                </value>
                <value>
                    <fullName>Company Travel Policy</fullName>
                </value>
                <value>
                    <fullName>Compleat</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Concur Approval</fullName>
                </value>
                <value>
                    <fullName>Customer Service - OBT</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Traditional</fullName>
                </value>
                <value>
                    <fullName>Fare Savings Issue</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Get There</fullName>
                </value>
                <value>
                    <fullName>Implementation&apos;</fullName>
                </value>
                <value>
                    <fullName>INNfinity</fullName>
                </value>
                <value>
                    <fullName>Invoicing/Refunds/Overcharge</fullName>
                </value>
                <value>
                    <fullName>Nutravel</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Quality Control</fullName>
                </value>
                <value>
                    <fullName>Scripts</fullName>
                </value>
                <value>
                    <fullName>TSS Agent issue</fullName>
                </value>
                <value>
                    <fullName>Udid reporting field Issue</fullName>
                </value>
                <value>
                    <fullName>Unused Ticket Reports/Name Change</fullName>
                </value>
                <value>
                    <fullName>Vendor - Air</fullName>
                </value>
                <value>
                    <fullName>Vendor - Car Rental</fullName>
                </value>
                <value>
                    <fullName>Vendor - Hotel</fullName>
                </value>
                <value>
                    <fullName>VIP Travellers</fullName>
                </value>
                <value>
                    <fullName>Vision 24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_DK__c</fullName>
        <label>Customer DK</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>The date the survey that generated this case was completed by traveler. Referenced/mapped in Flow.</description>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Routine_Name__c</fullName>
        <description>Name of the compleat routine for easytracking</description>
        <externalId>true</externalId>
        <label>Routine Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Owner field is mapped from the OwnerID field on the related Account for a Client Traveler Survey Case. Populated through Flow.</description>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Transfer</fullName>
                </value>
                <value>
                    <fullName>Compleat</fullName>
                </value>
                <value>
                    <fullName>Concur Approval System</fullName>
                </value>
                <value>
                    <fullName>Concur System</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Frequent Traveler Number</fullName>
                </value>
                <value>
                    <fullName>Get There System</fullName>
                </value>
                <value>
                    <fullName>Nutravel System</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Seat Selection</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vision Links</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_From__c</fullName>
        <description>Enter in the caller who brought this matter to CTS&apos;s attention.</description>
        <label>Received From</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Year__c</fullName>
        <label>Reported Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2013 - Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Traveler_Last__c</fullName>
        <label>Traveler Last</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Login_ID__c</fullName>
        <label>User Login ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Number__c</fullName>
        <label>Booking Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_comments__c</fullName>
        <description>Populated from the Survey Response for the Client Traveler Survey. Autogenerated through Flow.</description>
        <label>Other comments.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traveler_First__c</fullName>
        <label>Traveler First</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traveller_Name__c</fullName>
        <label>Traveller Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Recorded_By__c</fullName>
        <label>CSI Recorded By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonnie Casey</fullName>
                </value>
                <value>
                    <fullName>Brenda Thrasher</fullName>
                </value>
                <value>
                    <fullName>Christine Berbaum</fullName>
                </value>
                <value>
                    <fullName>Denise Ervin</fullName>
                </value>
                <value>
                    <fullName>Dina Catania</fullName>
                </value>
                <value>
                    <fullName>Doreen Benoy</fullName>
                </value>
                <value>
                    <fullName>Elisha Wold</fullName>
                </value>
                <value>
                    <fullName>Erika Kreis</fullName>
                </value>
                <value>
                    <fullName>Jody Hayes</fullName>
                </value>
                <value>
                    <fullName>Karen Rogers</fullName>
                </value>
                <value>
                    <fullName>Kyle Mistrot</fullName>
                </value>
                <value>
                    <fullName>Maggie Bates</fullName>
                </value>
                <value>
                    <fullName>Patty Makris</fullName>
                </value>
                <value>
                    <fullName>Rebecca Bennett</fullName>
                </value>
                <value>
                    <fullName>Terry Porter</fullName>
                </value>
                <value>
                    <fullName>Sharon Birtley</fullName>
                </value>
                <value>
                    <fullName>Tara Moe</fullName>
                </value>
                <value>
                    <fullName>Toni Zanella</fullName>
                </value>
                <value>
                    <fullName>Tracy Farris</fullName>
                </value>
                <value>
                    <fullName>Veronica Walker</fullName>
                </value>
                <value>
                    <fullName>Brooke Szczesniuk</fullName>
                    <label>_Brooke Szczesniuk</label>
                </value>
                <value>
                    <fullName>_Bruce Thomas</fullName>
                </value>
                <value>
                    <fullName>Carolyn Serafini</fullName>
                    <label>_Carolyn Serafini</label>
                </value>
                <value>
                    <fullName>_Cindy Kerrigan</fullName>
                </value>
                <value>
                    <fullName>Dan Neill</fullName>
                    <label>_Dan Neill</label>
                </value>
                <value>
                    <fullName>Darryl Martin</fullName>
                    <label>_Darryl Martin</label>
                </value>
                <value>
                    <fullName>Debbie Chick</fullName>
                    <label>_Debbie Chick</label>
                </value>
                <value>
                    <fullName>Eve Ryan</fullName>
                    <label>_Eve Ryan</label>
                </value>
                <value>
                    <fullName>Gena Carmen</fullName>
                    <label>_Gena Carmen</label>
                </value>
                <value>
                    <fullName>Katie Thress</fullName>
                    <label>_Katie Thress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Barter/Soft_Dollars</fullName>
                    <label>Barter/Soft Dollars</label>
                </value>
                <value>
                    <fullName>Billed Back to Client</fullName>
                </value>
                <value>
                    <fullName>Credited on Client CC</fullName>
                </value>
                <value>
                    <fullName>Credited on Client Statement</fullName>
                </value>
                <value>
                    <fullName>Supplier Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Check Request</fullName>
                </value>
                <value>
                    <fullName>DT Credit Card</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>IAR</fullName>
                </value>
                <value>
                    <fullName>Waived Service Fee</fullName>
                </value>
                <value>
                    <fullName>Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respondent_Name__c</fullName>
        <description>Populated from the Survey Response for a Client Traveler Survey. Autogenerated through Flow.</description>
        <label>Respondent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Respondent_Email__c</fullName>
        <description>Populated from the Survey Response for a Client Traveler Survey. Autogenerated through Flow.</description>
        <label>Respondent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments Custom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Action__c</fullName>
        <label>Resolution Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Informed</fullName>
                </value>
                <value>
                    <fullName>Letter/E-mail</fullName>
                </value>
                <value>
                    <fullName>Resolution Paid - By Direct Travel</fullName>
                </value>
                <value>
                    <fullName>Resolution Paid - By Vendor</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Emailed Apology</fullName>
                </value>
                <value>
                    <fullName>No Traveler Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate__c</fullName>
        <label>Steps to Recreate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSI_Internal_Notes__c</fullName>
        <label>CSI Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Resolution_Cost__c</fullName>
        <label>DT Resolution Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <label>Client Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_to_be_Approved__c</fullName>
        <label>Cost to be Approved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email_contact__c</fullName>
        <label>Client Email contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>URL_for_screen_shots__c</fullName>
        <label>URL for screen shots</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Salesforce_ID__c</fullName>
        <description>The case safe/sensitive 18 character unique Salesforce.com ID for this Case record.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_office_closure_types__c</fullName>
        <description>mid-office closure types</description>
        <label>Mid-office closure types</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_CONVERSION_CASE_NUMBER__c</fullName>
        <label>DT CONVERSION CASE NUMBER</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Center_Booking_Office__c</fullName>
        <description>The res center/booking office for a Case is populated from the related Account, when a Client Traveler Survey Case record is autogenerated through flow.</description>
        <label>Res Center / Booking Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_billable_to_client__c</fullName>
        <label>​Is this billable to client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account_Set_Up_Billing__c</fullName>
        <label>New Account Set Up Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_or_Favour_dollar_value__c</fullName>
        <label>Waiver or Favour dollar value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_QC_Name_Handling_the_Case__c</fullName>
        <label>Team QC Name Handling the Case</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_or_Non_Billable_Reason__c</fullName>
        <label>Billable or Non Billable Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable YES</fullName>
                </value>
                <value>
                    <fullName>Non Billable - Compleat Routine Maintenance</fullName>
                </value>
                <value>
                    <fullName>Non Billable - Script Maintenance</fullName>
                </value>
                <value>
                    <fullName>Non Billable - Compleat internal issue</fullName>
                </value>
                <value>
                    <fullName>Non Billable - Fee Waived need Finance Approval</fullName>
                </value>
                <value>
                    <fullName>Non Billable - Included in Contract Agreement</fullName>
                </value>
                <value>
                    <fullName>Non Billable-Included in Soft Dollar Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_to_recommend_services__c</fullName>
        <description>Net Promoter Score provided from a Survey Response for a Client Traveler Survey. Autogenerated through Flow.</description>
        <label>How likely to recommend services?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_was_your_reservation_experience__c</fullName>
        <description>Populated from the Survey Response from a Client Traveler Survey. Autogenerated through Flow.</description>
        <label>How was your reservation experience?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Steps_Prior_Escalation_Full_Service__c</fullName>
        <label>Steps Prior Escalation Full Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checked Compleat remarks *Q#</fullName>
                </value>
                <value>
                    <fullName>Checked PNR History *H</fullName>
                </value>
                <value>
                    <fullName>Checked PNR Queue History *QH</fullName>
                </value>
                <value>
                    <fullName>Checked Salesforce</fullName>
                </value>
                <value>
                    <fullName>Checked Star</fullName>
                </value>
                <value>
                    <fullName>Checked Traveler Profile</fullName>
                </value>
                <value>
                    <fullName>Contacted Airline</fullName>
                </value>
                <value>
                    <fullName>Contacted Car Company</fullName>
                </value>
                <value>
                    <fullName>Contacted Hotel</fullName>
                </value>
                <value>
                    <fullName>Provided Screen Shots</fullName>
                </value>
                <value>
                    <fullName>Tested Script</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Time_to_be_added_by_Team_QC__c</fullName>
        <label>Estimated Time to be added by Team QC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_spent_on_resolution_or_programming__c</fullName>
        <label>Time spent on resolution or programming</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>CSI</fullName>
        <active>true</active>
        <businessProcess>US CSI</businessProcess>
        <description>US Customer Service Incident (CSI)</description>
        <label>CSI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Support_Case</fullName>
        <active>true</active>
        <businessProcess>V2K Case Management</businessProcess>
        <description>Creates cases for customer support or programming automation</description>
        <label>Customer Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Traveler_Survey</fullName>
        <active>true</active>
        <businessProcess>Client Traveler Survey</businessProcess>
        <description>Case autogenerated from Traveler Survey Low NPS Score (0, 1, or 2)</description>
        <label>Client Traveler Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Booking_Tool_Issue</fullName>
        <active>true</active>
        <businessProcess>Online Booking Tool Support</businessProcess>
        <description>Log or Escalate Support Issues for OBT</description>
        <label>Online Booking Tool Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>QC_Compleat_Script_Requests</fullName>
        <active>true</active>
        <businessProcess>V2K Case Management</businessProcess>
        <description>Case to escalate compleat ad script issues</description>
        <label>QC - Compleat/Script Requests</label>
    </recordTypes>
    <validationRules>
        <fullName>Resolution_Type_and_Action_Required</fullName>
        <active>true</active>
        <description>For Client Traveler Survey Cases, a Case cannot be closed without a value in the Resolution Type and Resolution Action fields.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Client_Traveler_Survey&apos;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISBLANK(Resolution_Action__c),
ISBLANK(TEXT(Resolution_Type__c))
)
)</errorConditionFormula>
        <errorMessage>Please select a Resolution Action and Resolution Type in order to close this case.</errorMessage>
    </validationRules>
</CustomObject>